--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -4,5 +4,12 @@
   <scipt src=unit3.js ></script>
   <p id="demo"></p>
   <p id="demo1"></p>
+  <select id ="lang">
+  <option value = "english">english</option>
+  <option value = "hindi">hindi</option>
+</select>
+<input type ="button"
+  value = "lang"
+  on click = "changeLang()"/>
   </body>
 </html>
