--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -11,5 +11,7 @@
 <input type ="button"
   value = "lang"
   on click = "changeLang()"/>
+  <p>id="reform"
+    <input type="button" onclick="newFunction()" value="Re-form the sentence"></p>
   </body>
 </html>
