--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -12,6 +12,8 @@
   value = "lang"
   on click = "changeLang()"/>
   <p>id="reform"
-    <input type="button" onclick="newFunction()" value="Re-form the sentence"></p>
+    <input type="button" onclick="newFunction()" value="Re-form the sentence" disabled="disabled">
+    <input type="button" onclick="checkfunction()" value="check correctness of the sentence" disabled="disabled"></p>
+  
   </body>
 </html>
