--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -14,6 +14,6 @@
   <p>id="reform"
     <input type="button" onclick="newFunction()" value="Re-form the sentence" disabled="disabled">
     <input type="button" onclick="checkfunction()" value="check correctness of the sentence" disabled="disabled"></p>
-  
+    <input type="button" onclick="correctans()" value="GET CORRECT SENTENCE" disabled="disabled"></p>
   </body>
 </html>
