--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -13,7 +13,8 @@
   on click = "changeLang()"/>
   <p>id="reform"
     <input type="button" onclick="newFunction()" value="Re-form the sentence" disabled="disabled">
-    <input type="button" onclick="checkfunction()" value="check correctness of the sentence" disabled="disabled"></p>
-    <input type="button" onclick="correctans()" value="GET CORRECT SENTENCE" disabled="disabled"></p>
+    <input type="button" onclick="checkfunction()" value="check correctness of the sentence" disabled="disabled">
+    <input type="button" onclick="correctans()" value="GET CORRECT SENTENCE" disabled="disabled">
+    <input type="button" onclick="hideans()" value="Hide the correct sentence" disabled="disabled"></p>
   </body>
 </html>
