--- a/RDIP/Codes/unit3.html
+++ b/RDIP/Codes/unit3.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+</head>
 <body>
   <scipt src=unit3.js ></script>
   <p id="demo"></p>
@@ -8,13 +11,10 @@
   <option value = "english">english</option>
   <option value = "hindi">hindi</option>
 </select>
-<input type ="button"
-  value = "lang"
-  on click = "changeLang()"/>
+  <input type ="button" value = "lang" onclick = "changeLang()"/>
   <p>id="reform"
     <input type="button" onclick="newFunction()" value="Re-form the sentence" disabled="disabled">
     <input type="button" onclick="checkfunction()" value="check correctness of the sentence" disabled="disabled">
-    <input type="button" onclick="correctans()" value="GET CORRECT SENTENCE" disabled="disabled">
-    <input type="button" onclick="hideans()" value="Hide the correct sentence" disabled="disabled"></p>
+    <input type="button" onclick="correctans()" value="GET CORRECT SENTENCE" disabled="disabled"></p>
   </body>
 </html>
