--- a/RDIP/Codes/unit4.html
+++ b/RDIP/Codes/unit4.html
@@ -1,5 +1,9 @@
 <html>
 <body>
-
+<select name="option" id="option">
+    <option value="corpus1">corpus1</option>
+    <option value="corpus2">corpus2</option>
+    <option value="corpus3">corpus3</option>
+  </select>
 </body>
 </html>
