--- a/RDIP/Codes/unit4.html
+++ b/RDIP/Codes/unit4.html
@@ -5,5 +5,18 @@
     <option value="corpus2">corpus2</option>
     <option value="corpus3">corpus3</option>
   </select>
+    <h3>Enter the number of tokens and types for the above corpus:</h3>
+    <table>
+  <tr>
+    <td>#tokens</td>
+    <td><input type="number" id="#tokens" name="#tokens"><br><br></td>
+  </tr>
+  <tr>
+    <td>#types</td>
+    <td><input type="number" id="#types" name="#types"><br><br></td>
+  </tr>
+</table>
+
+  <input type="submit" value="Submit" onclick="checkfuntion()">
 </body>
 </html>
